--- a/assets/web/sass/_custom.scss
+++ b/assets/web/sass/_custom.scss
@@ -51,3 +51,35 @@ body {
 
     align-items: center;
 }
+
+.custom-show-shipping {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    .shipping-method-label {
+        font-weight: 600;
+        font-family: "Quicksand";
+        font-size: 14px;
+        padding-left: 10px;
+    }
+    .outlet-select {
+        width: 250px;
+        text-wrap: wrap;
+        font-size: 14px;
+        padding: 10px;
+        padding-right: 30px;
+        min-height: 30px;
+        option {
+            text-wrap: wrap;
+            padding: 10px;
+        }
+    }
+
+    @media (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        .outlet-select {
+            width: 100%;
+        }
+    }
+}
