update shipping & merge order photo

--- a/assets/web/sass/_custom.scss
+++ b/assets/web/sass/_custom.scss
@@ -51,6 +51,11 @@ body {
 
     align-items: center;
 }
+.data-box {
+    ul {
+        margin: 0;
+    }
+}
 
 .custom-show-shipping {
     display: flex;
