handle changes image editor

--- a/assets/web/sass/_editor.scss
+++ b/assets/web/sass/_editor.scss
@@ -242,3 +242,6 @@ $theme-color: #61DAFB;
 		border-bottom: 0 !important;
 	}
 }
+.advanced-cropper__background-wrapper {
+	background-color: white;
+}
