update version for client review photobook feature

--- a/assets/web/sass/_custom.scss
+++ b/assets/web/sass/_custom.scss
@@ -97,6 +97,7 @@ body {
 // Preview photobook
 
 .preview-container {
+    margin-bottom: 50px;
     .preview-item {
         display: flex;
         margin-bottom: 50px;
