--- a/assets/web/sass/_custom.scss
+++ b/assets/web/sass/_custom.scss
@@ -160,3 +160,17 @@ body {
         background-color: #fd604f;
     }
 }
+
+.custom-input {
+    &.input-country input {
+        background: none !important;
+        padding: 8px 0 !important;
+        min-height: 0;
+        border: 0;
+        margin: 0;
+    }
+}
+.photo-id-box {
+    border: 2px solid #cacaca;
+    padding: 30px;
+}
