--- a/assets/web/sass/_editor.scss
+++ b/assets/web/sass/_editor.scss
@@ -1,18 +1,22 @@
 $theme-color: #61DAFB;
+
 .image-editor {
 	color: $theme-color;
 	border: solid 1px #2b2a30;
 	max-height: 100%;
+
 	&__cropper {
 		background: #0f0e13;
 		height: 600px;
 		max-height: 100%;
 		position: relative;
+
 		@media (max-width: 540px) {
 			height: auto;
 			min-height: 400px;
 		}
 	}
+
 	&__slider {
 		width: 100%;
 		left: 50%;
@@ -20,32 +24,39 @@ $theme-color: #61DAFB;
 		bottom: 10px;
 		position: absolute;
 	}
+
 	&__cropper-overlay {
 		transition: 0.5s;
+
 		&--faded {
 			color: rgba(black, 0.9);
 		}
 	}
+
 	&__service {
 		pointer-events: none;
 		left: -100%;
 		position: absolute;
 	}
+
 	&__reset-button {
 		position: absolute;
 		right: 20px;
 		top: 20px;
 		background: rgba(white, 0.1);
+
 		&:hover {
 			fill: $theme-color;
 			background: rgba(white, 0.2);
 		}
+
 		&--hidden {
 			opacity: 0;
 			visibility: hidden;
 		}
 	}
 }
+
 .image-editor-slider {
 	width: 100%;
 	height: 20px;
@@ -126,14 +137,17 @@ $theme-color: #61DAFB;
 		&:hover {
 			height: 10px;
 		}
+
 		&--focus {
 			height: 10px;
 		}
+
 		&--hidden {
 			height: 4px;
 		}
 	}
 }
+
 .image-editor-navigation {
 	background: #1b1a21;
 	height: 84px;
@@ -143,21 +157,25 @@ $theme-color: #61DAFB;
 	justify-content: space-between;
 	padding-left: 16px;
 	padding-right: 16px;
+
 	&__button {
 		margin-left: 8px;
 		margin-right: 8px;
 		transition: all 0.2s ease-in-out;
+
 		&.active {
 			background-color: #5a5858db !important;
 			color: #FFF;
 		}
 	}
+
 	&__buttons {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		gap: 5px;
 	}
+
 	&__upload-input {
 		display: none;
 	}
@@ -165,15 +183,18 @@ $theme-color: #61DAFB;
 	@media (max-width: 540px) {
 		padding-left: 8px;
 		padding-right: 8px;
+
 		&__button {
 			margin-left: 4px;
 			margin-right: 4px;
 		}
+
 		height: auto;
 		flex-wrap: wrap;
 		justify-content: center;
 	}
 }
+
 .image-editor-button {
 	width: 46px;
 	height: 46px;
@@ -189,35 +210,42 @@ $theme-color: #61DAFB;
 	cursor: pointer;
 	color: currentColor;
 	padding: 0;
+
 	&--active {
 		background: rgba(white, 0.03);
 		fill: currentColor;
 	}
-	&:hover, &:focus {
+
+	&:hover,
+	&:focus {
 		background: rgba(white, 0.03);
 	}
+
 	@media (max-width: 540px) {
 		width: 32px;
 		height: 32px;
 	}
 }
+
 .adjustable-image-source {
 	display: none;
 }
+
 .image-editor_reset {
-    position: absolute !important;
-    right: 20px;
-    top: 20px;
+	position: absolute !important;
+	right: 20px;
+	top: 20px;
 }
 
 .custom-cropper-preview {
-    height: 120px;
-    width: 120px;
-    background: black;
-    border: solid 1px #2b2a30;
-    position: absolute !important;
-    left: 20px;
-    top: 20px;
+	height: 120px;
+	width: 120px;
+	background: black;
+	border: solid 1px #2b2a30;
+	position: absolute !important;
+	left: 20px;
+	top: 20px;
+
 	@media (max-width: 540px) {
 		transform: translate(75%, 15%);
 		left: 0;
@@ -225,7 +253,8 @@ $theme-color: #61DAFB;
 		display: none !important;
 	}
 }
-.input-quanity  {
+
+.input-quanity {
 	input {
 		margin: 0 !important;
 		padding: 0 !important;
@@ -234,17 +263,21 @@ $theme-color: #61DAFB;
 		outline: none !important;
 		text-align: center;
 		min-height: 0 !important;
+
 		&:focus {
 			outline: none !important;
 		}
 	}
+
 	&::before {
 		border-bottom: 0 !important;
 	}
 }
+
 .advanced-cropper__background-wrapper {
 	background-color: white;
 }
+
 .object-fit-cover {
 	object-fit: cover;
 	object-position: center center;
@@ -258,4 +291,8 @@ $theme-color: #61DAFB;
 	.MuiButton-loadingIndicator {
 		color: #FFF;
 	}
+}
+
+.woocommerce-cart-form__cart-item.cart_item .product-thumbnail {
+	min-width: 160px;
 }
