update whatsapp button in preview page

--- a/assets/web/sass/_custom.scss
+++ b/assets/web/sass/_custom.scss
@@ -174,3 +174,8 @@ body {
     border: 2px solid #cacaca;
     padding: 30px;
 }
+.whatsapp-btn {
+    padding: 6px 20px;
+    background-color: #4EC95C !important;
+    color: white !important;
+}
